<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android</string>
    <string name="menu">MENU</string>
    <string name="calculator">Calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equal">=</string>
    <string name="button_ac">AC</string>
    <string name="button_back">Back</string>
    <string name="button_float">.</string>

    <string name="mplayer">Music player</string>

</resources>