<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >
    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:gravity="end"
        android:height="150dp"
        android:padding="30dp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/display"
        android:columnCount="4"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="ops"
            android:text="@string/button_plus" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_5" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="ops"
            android:text="@string/button_minus" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="ops"
            android:text="@string/button_multiply" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="floatInput"
            android:text="@string/button_float" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#5c5951"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="appendText"
            android:text="@string/button_0" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="equal"
            android:text="@string/button_equal" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="ops"
            android:text="@string/button_divide" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_columnSpan="2"
            android:onClick="backAll"
            android:text="@string/button_ac" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_margin="3dp"
            android:background="#946a16"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_columnSpan="2"
            android:onClick="back"
            android:text="@string/button_back" />
    </GridLayout>
</RelativeLayout>